--- a/server/views/admin/admin_home.ejs
+++ b/server/views/admin/admin_home.ejs
@@ -15,24 +15,17 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1>All Articles</h1>
-        <a href="admin/new" class="btn btn-secondary">New Article</a>
-        <% articles.forEach(article => { %>
-            <div class="card mt-4">
-              <div class="card-body">
-                <h4 class="card-title"><%= article.title %></h4>
-                <div class="card-subtitle text-muted mb-2">
-                  <%= new Date(article.date).toLocaleDateString() %>
-                </div>
-                <div class="card-text mb-2"><%= article.description %></div>
-                <a href="blog/<%= article.id %>" class="btn btn-primary">Read</a>
-                <a href="admin/edit/<%= article.id %>" class="btn btn-info">Edit</a>
-                <form action="/admin/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
-                  <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
-              </div>
-            </div>
-          <% }) %>
+        <h1>Admin Home</h1>
+        <h4 class="text-muted mb-5">Logged in as: <%= username %></h4>
+        <div class="container-fluid row mb-3">
+            <a href="admin/article/" class="btn btn-primary">Article Management</a>
+        </div>
+        <div class="container-fluid row mb-3">
+            <a href="admin/user/" class="btn btn-primary">User Management</a>
+        </div>
+        <form action="/authenticate/logout?_method=DELETE" method="POST" >
+            <button type="submit" class="btn btn-secondary">Log out</button>
+        </form>
     </div>
 
 </body>
