--- a/server/views/admin/article/admin_new_article.ejs
+++ b/server/views/admin/article/admin_new_article.ejs
@@ -21,7 +21,7 @@
         <h1 class="mb-4">
             New Article
         </h1>
-        <form action="/admin/new" method="post">
+        <form action="/admin/article/new" method="post">
             <div class="form-group">
                 <label for="title">Title</label>
                 <input required type="text" class="form-control" id="title" placeholder="Article Title" name="title">
@@ -44,7 +44,7 @@
             
             <button type="submit" class="btn btn-primary">Save</button>
             
-            <a href="/admin" class="btn btn-secondary">Cancel</a> 
+            <a href="/admin/article" class="btn btn-secondary">Cancel</a> 
 
             <div class="container-fluid mt-3">
                 <h4>Preview</h4>
@@ -82,7 +82,7 @@
                 author:$('#author').val(),
                 markdown:$('#markdown').val()
             }
-            $.post("/admin/get/preview",dataPost,markdownUpdateCallback)
+            $.post("/admin/article/get/preview",dataPost,markdownUpdateCallback)
         }
         
         function markdownUpdateCallback(data,status){           
