--- a/server/views/admin/article/admin_new_article.ejs
+++ b/server/views/admin/article/admin_new_article.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+<link rel="stylesheet" href="https://tiltnpour.herokuapp.com/static/css/main.a14fa789.chunk.css"/>
 <!-- JS, Popper.js, and jQuery -->
 <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -48,11 +48,11 @@
 
             <div class="container-fluid mt-3">
                 <h4>Preview</h4>
-                <h6 class="text-muted">Note this does not include styles applied in react</h6>
-                <h6 class="text-muted">For information on markdown styling please visit <a href="https://github.github.com/gfm/" target="_blank">https://github.github.com/gfm/</a></h6>
+                <h6 class="text-muted">Note this *MAY* not include styles applied in react (this feature is currently a bit of a hack and needs manually updated with each react build)</h6>
+                <h6 class="text-muted">For information on markdown styling please visit <a href="https://github.github.com/gfm/" target="_blank">GitHub Flavored Markdown Spec (based on CommonMark spec)</a></h6>
                 
                 <div id="html-preview" class="container-fluid mx-0 px-0">
-                    Preview will appear here.
+                    Preview will appear here (edit the markdown content and click out of the text area)
                 </div>  
             </div>
         </form>
@@ -63,7 +63,7 @@
 
         $("#markdown").change(
             function(){
-                // Set a 5s timeout on each markdown edit, cancelling the previous one.
+                // Set a 1s timeout on each markdown edit, cancelling the previous one.
                 // If it is allowed to timeout it will update the preview
                 if(timeoutHandle!=-1){
                     clearTimeout(timeoutHandle)
