--- a/server/views/admin/article/admin_new_article.ejs
+++ b/server/views/admin/article/admin_new_article.ejs
@@ -1,21 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- CSS only -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<link rel="stylesheet" href="https://tiltnpour.herokuapp.com/static/css/main.a14fa789.chunk.css"/>
-<!-- JS, Popper.js, and jQuery -->
-<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="/adm/css/common" />
+    <link rel="stylesheet" href="/adm/css/blog" />
+
+    <link rel="stylesheet" type='text/css' media='screen' href="/css/font-awesome-4.7.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap css -->
+    <link rel='stylesheet' type='text/css' media='screen'
+        href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
+
+    <!-- Load jQuery and bootstrap js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+        <script type="text/javascript">
+            function markdownUpdate() {
+                var data = $('#markdown').val();
+                // Post the markdown textarea text to the preview action, request callback to the callback handler
+                console.log("Sending");
+                var dataPost = {
+                    title: $('#title').val(),
+                    description: $('#description').val(),
+                    author: $('#author').val(),
+                    markdown: $('#markdown').val()
+                }
+                $.post("/admin/article/get/preview", dataPost, markdownUpdateCallback)
+            }
+    
+            function markdownUpdateCallback(data, status) {
+                console.log(data.htmlPreview)
+                $('#blog').html(data.htmlPreview)
+            }
+    
+            function insertAtCursor(value) {
+                var cursorPos = $('#markdown').prop('selectionStart');
+                var v = $('#markdown').val();
+                var textBefore = v.substring(0, cursorPos);
+                var textAfter = v.substring(cursorPos, v.length);
+    
+                $('#markdown').val(textBefore + value + textAfter);
+            }
+    
+            function insertAroundHighlighted(value) {
+                var cursorPos = $('#markdown').prop('selectionStart');
+                var endPos = $('#markdown').prop('selectionEnd');
+                var v = $('#markdown').val();
+                var textBefore = v.substring(0, cursorPos);
+                var highlightedText = v.substring(cursorPos, endPos);
+                var textAfter = v.substring(endPos, v.length);
+    
+                $('#markdown').val(textBefore + value + highlightedText + value + textAfter);
+            }
+    
+            function insertBeforeAfterHighlighted(before, after) {
+                var cursorPos = $('#markdown').prop('selectionStart');
+                var endPos = $('#markdown').prop('selectionEnd');
+                var v = $('#markdown').val();
+                var textBefore = v.substring(0, cursorPos);
+                var highlightedText = v.substring(cursorPos, endPos);
+                var textAfter = v.substring(endPos, v.length);
+    
+                $('#markdown').val(textBefore + before + highlightedText + after + textAfter);
+            }
+    
+            // Functions for toolbar
+            function insertH1() {
+                insertAtCursor("# ");
+            }
+    
+            function insertH2() {
+                insertAtCursor("## ");
+            }
+    
+            function insertH3() {
+                insertAtCursor("### ");
+            }
+    
+            function insertH4() {
+                insertAtCursor("#### ");
+            }
+    
+            function insertListItem() {
+                insertAtCursor("- ");
+            }
+    
+            function insertHr() {
+                insertAtCursor("\n***\n");
+            }
+            function insertBold() {
+                insertAroundHighlighted("**");
+            }
+            function insertItalic() {
+                insertAroundHighlighted("*");
+            }
+    
+            function insertImage() {
+                var url = window.prompt("Enter url:", "");
+                var alt = window.prompt("Enter alt text (optional):", "");
+                if (url === null) {
+                    alert("can't insert image without url.")
+                    return;
+                }
+                if (alt === null) {
+                    alt = "";
+                }
+                insertAtCursor("![" + alt + "](" + url + ")\n\n");
+            }
+    
+            function insertLink() {
+                var url = window.prompt("Enter url:", "");
+                var txt = window.prompt("Enter text:", "");
+    
+                if (url === null || txt === null) {
+                    alert("can't insert link without url or text.")
+                    return;
+                }
+                insertAtCursor("[" + txt + "](" + url + ")");
+            }
+    
+            function insertQuote() {
+                insertAtCursor("> ");
+            }
+    
+            function insertSampleTable(){
+                insertAtCursor("\n\nFirst Header | Second Header\n------------ | -------------\nContent from cell 1 | Content from cell 2\nContent in the first column | Content in the second column\n\n");
+            }
+        </script>
 </head>
+
 <body>
     <div class="container-fluid">
         <h1 class="mb-4">
@@ -26,72 +151,90 @@
                 <label for="title">Title</label>
                 <input required type="text" class="form-control" id="title" placeholder="Article Title" name="title">
             </div>
-            
+
             <div class="form-group">
                 <label for="description">Description</label>
-                <input required type="text" class="form-control" id="description" placeholder="Description" name="description">
+                <input required type="text" class="form-control" id="description" placeholder="Description"
+                    name="description">
             </div>
-            
+
             <div class="form-group">
                 <label for="author">Author</label>
                 <input required type="text" class="form-control" id="author" placeholder="Author" name="author">
             </div>
-            
+
             <div class="form-group">
                 <label for="markdown">Markdown Content</label>
-                <textarea class="form-control" id="markdown" placeholder="" name="markdown"></textarea>
+                <p class="text-muted">Click any tool button to insert the applicable markdown at the cursor position in
+                    the markdown field.
+                    <br />For bold, italic, link etc please type the text and then select and click.
+                    <br />Markdown is per-line, so to make 2 lines bold highlight each line individually
+                </p>
+                <div class="row pl-4 mb-3">
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertH1()">H1</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertH2()">H2</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertH3()">H3</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertH4()">H4</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertListItem()">List
+                            Item</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertHr()">&lthr&gt</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertBold()">Bold</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertItalic()">Italic</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertImage()">Image</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertLink()">Link</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertQuote()">Quote</button>
+                    </div>
+                    <div classname="col-1">
+                        <button type="button" class="btn btn-outline-dark mr-2" onclick="insertSampleTable()">Table (sample)</button>
+                    </div> 
+                </div>
+                <textarea class="form-control" id="markdown" placeholder=""
+                    name="markdown"></textarea>
             </div>
-            
+
             <button type="submit" class="btn btn-primary">Save</button>
-            
-            <a href="/admin/article" class="btn btn-secondary">Cancel</a> 
+
+            <a href="/admin/article" class="btn btn-secondary">Cancel</a>
+            <button onclick="markdownUpdate()" type="button" class="btn btn-success">Preview</button>
 
             <div class="container-fluid mt-3">
                 <h4>Preview</h4>
-                <h6 class="text-muted">Note this *MAY* not include styles applied in react (this feature is currently a bit of a hack and needs manually updated with each react build)</h6>
-                <h6 class="text-muted">For information on markdown styling please visit <a href="https://github.github.com/gfm/" target="_blank">GitHub Flavored Markdown Spec (based on CommonMark spec)</a></h6>
-                
-                <div id="html-preview" class="container-fluid mx-0 px-0">
-                    Preview will appear here (edit the markdown content and click out of the text area)
-                </div>  
+                <h6 class="text-muted">The markdown is customised in blog.css - please edit this to apply additional
+                    styles.</h6>
+                <h6 class="text-muted">For information on markdown styling please visit <a
+                        href="https://github.github.com/gfm/" target="_blank">GitHub Flavored Markdown Spec (based on
+                        CommonMark spec)</a></h6>
+
+                <div id="blog" class="container-fluid mx-0 px-0">
+                    Preview will appear here
+                </div>
             </div>
         </form>
 
-        <script type="text/javascript">
-        
-        var timeoutHandle = -1;
 
-        $("#markdown").change(
-            function(){
-                // Set a 1s timeout on each markdown edit, cancelling the previous one.
-                // If it is allowed to timeout it will update the preview
-                if(timeoutHandle!=-1){
-                    clearTimeout(timeoutHandle)
-                }
-                timeoutHandle = setTimeout(markdownUpdate,1000);
-            }
-        )
-
-        function markdownUpdate(){
-            var data =  $('#markdown').val();
-            // Post the markdown textarea text to the preview action, request callback to the callback handler
-            console.log("Sending");
-            var dataPost = {
-                title:$('#title').val(),
-                description:$('#description').val(),
-                author:$('#author').val(),
-                markdown:$('#markdown').val()
-            }
-            $.post("/admin/article/get/preview",dataPost,markdownUpdateCallback)
-        }
-        
-        function markdownUpdateCallback(data,status){           
-            console.log(data.htmlPreview)
-            $('#html-preview').html(data.htmlPreview)
-        }
-
-        </script>
     </div>
 
 </body>
+
 </html>
