--- a/server/views/admin/event/admin_event.ejs
+++ b/server/views/admin/event/admin_event.ejs
@@ -15,26 +15,28 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1>Admin Home</h1>
-        <h4 class="text-muted mb-5">Logged in as: <%= username %></h4>
-        <div class="container-fluid row mb-3">
-            <a href="admin/article/" class="btn btn-primary">Article Management</a>
-        </div>
-        <div class="container-fluid row mb-3">
-            <a href="admin/user/" class="btn btn-primary">User Management</a>
-        </div>
-        <div class="container-fluid row mb-3">
-            <a href="admin/event/" class="btn btn-primary">Event Management</a>
-        </div>
-        <div class="container-fluid row mb-3">
-            <a href="admin/brewery/" class="btn btn-primary">Brewery Management</a>
-        </div>
-        <div class="container-fluid row mb-3">
-            <a href="admin/message/" class="btn btn-primary">Message Management</a>
-        </div>
-        <form action="/authenticate/logout?_method=DELETE" method="POST" >
-            <button type="submit" class="btn btn-secondary">Log out</button>
-        </form>
+        <h1>Event Management</h1>
+        <a href="new" class="btn btn-secondary">New Event</a>
+        <% if(events.length===0) { %> <h2 class="text-danger">No events</h2> <% } %>
+        <% events.forEach(event => { %>
+            <div class="card mt-4">
+              <div class="card-body">
+                <h4 class="card-title"><%= event.name %></h4>
+                <div class="card-subtitle text-muted mb-2">
+                  <%= new Date(event.date).toLocaleDateString() %>
+                </div>
+                <div class="card-text mb-2"><%= event.description %></div>
+                <a href="/blog/<%= event.id %>" class="btn btn-primary">Read</a>
+                <a href="/admin/event/edit/<%= event.id %>" class="btn btn-info">Edit</a>
+                <form action="/admin/event/<%= event.id %>?_method=DELETE" method="POST" class="d-inline">
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+              </div>
+            </div>
+          <% }) %>
+
+          <br />
+          <a href="/admin" class="btn btn-secondary">Back</a>
     </div>
 
 </body>
